<resources>
    <string name="app_name">桃園快樂遊</string>
    <string name="textview">   虎頭山公園座落於桃園市郊成功路三段臨南崁溪處，每天都有許多居民來公園運動晨操，假日的人潮更是暴增，連來自龜山、八德、中壢、桃園、蘆竹之民眾都愛到此健行休閒。未來將從現有的15公頃公園擴大為720公頃的風景特定區，
        規劃虎頭山、楓樹坑二大遊憩系統、八大主題路線，將虎頭山打造成北台灣重要的都會公園。

        虎頭山公園鄰近桃園市區，地勢居高臨下，為城市景觀保留了豐沛綠意，而享有「桃園後花園」的美譽。公園內規劃有多條步道系統，以顏色作為路線區分，除了園區的人行步道外，另外完整規劃出包括賞景健康步道、櫻花步道、森林體驗步道、太陽亭步道、梅園步道、生態解說步道、忠烈祠步道等七條登山步道，讓遊客更容易探訪虎頭山的美景全貌。
</string>
    <string name="textview2">
位在桃園八德重劃區內的興仁花園夜市，號稱北台灣最大夜市，占地六千坪、五百坪停車場，共設有600個攤位，並劃分為美食區與遊戲雜貨區，內容相當多元。興仁花園夜市的前身為向日葵夜市，後來加上從內壢撤離的興仁夜市後，在此合併，重新成為豐富精彩又吸引人的大型夜市。夜市內設有活動帳篷，每週二、五、六、日就可在此看見各攤的小吃美食及遊樂設施，是闔家親子同遊的好去處。


夜市裡的美食眾多，不論台式、義式等異國料理，滷味、甜點或新鮮海鮮等美味通通都有。興仁花園夜市也是小孩的天堂，B區歡樂王國充滿多樣化的遊樂設施，包括套圈圈、麻將賓果王國、德州撲克、氣墊城堡、動力彈跳、旋轉木馬、小火車、海盜船等趣味攤商，大人小孩都能在此玩得歡樂又盡興。
</string>
    <string name="button">任意門</string>
    <string name="button1">桃園區</string>
    <string name="button2">八德區</string>
    <string name="button3">中壢區</string>
    <string name="button4">大溪區</string>
    <string name="button5">龍潭區</string>
    <string name="button6">平鎮區</string>
    <string name="button7">龜山區</string>
    <string name="button8">蘆竹區</string>
    <string name="button9">大園區</string>
    <string name="button10">觀音區</string>
    <string name="button11">新屋區</string>
    <string name="button12">楊梅區</string>
    <string name="button13">復興區</string>
    <string name="tou">Tou</string>
    <string name="tou1">Tou</string>

    <string name="bade">Bade</string>
    <string name="bade1">Bade</string>
    <string name="tu">Tu</string>
    <string name="textview3">龍岡分館座落於台貿公園旁，館舍周圍除保留原有的樹木外，亦在頂樓設置太陽能光電板，利用日照環保節電，並已取得黃金級綠建築執照。其內部空間規劃為地上四層、地下兩層，一樓右側是社區活動中心，左側為圖書館的閱報區、網路資訊區及服務櫃檯，二樓為期刊區及兒童室，三樓是書庫、參考室及地方文獻室，四樓為閱覽室及多功能教室，有265個座位，供民眾自修使用，總計1940坪。建築師秉持「每一座圖書館都有書架，在琳琅滿目的藏書中挑一本書，每本書中都有一個豐富的世界」的理念設計外觀，側面落地窗設計有45個書本樣式面板，開啟時像打開一本一本的書，是一個意象與實體結合，設計感十足的建築物。</string>
    <string name="dac">dac</string>
    <string name="textview4">和平老街ｖｓ中山老街

和平老街：大溪的和平老街可說是代表大溪最繁盛的老街，近百戶的華麗街屋，以及深刻的歷史歲月，都讓人讚嘆不已，每一戶住家牆外巴洛克風格和洛可可風格的雕刻圖案，都有它不同的象徵意義，留下了不能抹滅的歷史見證，在推動社區總體營造後，雖然已經不如以往繁盛，但與中山老街相比仍舊是相當熱鬧的了。　

老街舊圖2
老街現景
中山老街：中山老街因為這裡的空間很多早已廢棄，只剩下街道立面的牌樓，很多的房屋也早已無人居住，街道的店面也是少之又少，街裡有兩塊廢棄的空地，使的中山老街看起來更加的荒涼，但街道兩旁涇渭分明，單號門牌為名門的住家，而雙號門牌則是倉庫、工人住房與一般民宅，目前大多已改建為現代建築。在歷史的摧殘下，令人感到孤獨和惋惜啊！</string>
    <string name="xo">小人國正式誕生於1984年7月7日，當初只為了心中的一個想法，建構出夢想國度！創辦人朱鍾宏董事長在一次國外旅遊看見荷蘭迷你景觀建築時，心裡不禁想著：「如果國內也有這樣的專門模型樂園該有多好？」於是回到國內找了專門製造模型的師傅共襄盛舉，一起編織這個美夢，集世界景觀於一地開創了小人國。

創業是艱辛的歷程，為了打造具有國際觀的休閒遊樂園，團隊們各個絞盡腦汁、為實踐夢想秉持信念，堅持園內所有的迷你建築景觀都要是台灣手工打造。

為了研發不怕風雨的模型，從天天實驗、測試各種顏料、泥土、材質研究到完美無缺才開始建造，不僅如此，許多專家學者紛紛加入建造美夢的團隊，不斷前來園區做研究並且擔任監工的角色就是要呈現最好的東西。

朱董事長從每一棟建築物的磚塊數到植物的比例都要求甚嚴，只要比例錯了、磚塊數目不對就得重來，此外，在模型比例上更堅持園內133座迷你景觀都要依照原始建築的25分之一製作，很多人問為什麼要堅持這樣的比例，許多國家迷你建築只做15分之一啊？「因為25分之一最能展現建築物的精緻，如此一來遊客才能欣賞到最完美、最完整的藝術層面，達到『遊玩小人國，認識大世界』的真諦！」

然而模型開模、資料索取不易，歷經無數次失敗，甚至整整8年沒有收入，整個團隊仍然不放棄理想、堅持到最後，終於將心中的夢想國度成功地呈現在世人眼前。</string>
    <string name="liu">liu</string>
    <string name="textview5">4月雪開囉!!進入流蘇花期桃園流蘇景點都披上雪白流蘇花，位於桃園平鎮社子支渠景觀流蘇步道

流蘇花沿著石門大圳社子支渠盛開，景觀步道全長135公尺種植350株流蘇樹，加上白色麻葉繡球花

彷彿來到北歐王國高唱冰雪奇緣Let It Go，全台第一條以流蘇為主的景觀步道，跟我一起賞流蘇花去
    從入口大約走150公尺這一段的景觀最美，上面是流蘇花下面是麻葉繡球花，雪白一片像下雪般美不勝收
    麻葉繡球花小花團聚形似繡球，葉片似芝麻葉，開花花序圓整排列如半球形又叫小手毬，雪白一片很搶眼。
    </string>
    <string name="fon">fon</string>
    <string name="textview7">農田、老樹、鄉間小路，原來桃園也有伯朗大道?想徜徉在完美花海，原來不是只能在大溪！境內有三個谷地的楓樹坑(又名楓樹村)，因早先時候種滿了楓樹而得名，現雖不見楓林片片的景象，倒是可以在不同季節觀賞迎風搖曳的綠色稻浪、滿山頭白茫茫的芒草、五月桐花紛飛、太陽花怒展夏日氣息等景象，隨興漫步、騎單車遊逛就是一大享受。   
由光明街290巷左轉直行約160公尺來到賞花路線－中坑線、風尾坑線交叉口。中坑線一路延伸至中坑五號橋前的土地公廟，全程約4公里，坡度略大於風尾坑線。沿途除了一些小型工廠，便是一畦一畦的農田，人口密度低的楓樹坑有著鄉村獨有的悠閒感；微風與待熟的莊稼正對話，空氣中飄著火龍果香，白鷺鷥優雅飛翔，蟲鳴鳥叫成了不成調的鄉間民謠。11月收割後，農人撒上波斯菊、向日葵、百日草，農田成了花田，綺麗花色總讓人忍不住駐足。</string>
    <string name="textview8">
長流美術館係由國內知名書畫鑑定家黃承志先生，以積累三十年的深厚美力為根基，基於推廣藝術的熱忱創辦而成。

民國93年3月22日正式掛牌營運。座落於蘆竹鄉南崁中悅高登社區一樓，全館面積約六百坪，挑高七公尺，空間規劃有辦公室、貴賓室、休息室、演講廳、典藏室、多功能活動教室、圖書區、禮品區、典藏庫等分區，適合舉辦各類展覽及活動，具有國際展覽場的水準。

館內收藏古今名家水墨、油畫、雕塑、陶瓷、版畫作品萬餘件，華人作品包括本土名家林玉山、郭雪湖、陳進、楊三郎、陳澄波、黃鷗波、朱銘及跨海三大家張大千、黃君璧、溥心畬等人傑作，國外作品則囊括畢卡索、達利、阿曼等大師之作，藏品質量俱豐，又與國外藝術家、收藏家及美術館頻繁往來，可源源不絕舉辦國際級藝術展覽，並配合出版畫冊、長流藝聞等刊物，堪稱國內水準最高、活力最旺盛的私立美術館。 </string>
    <string name="textview9">竹圍漁港簡介
竹圍漁港位於桃園市大園區，近年已成為兼具休閒功能的觀光漁港；竹圍漁港自1950年代開港，歷經半個世紀多，主要漁獲物有鰆、鯊、黑鯧、小卷、鰹、烏魚等魚類，已和基隆碧砂漁港、台北石門富基漁港並稱為北台灣三大漁獲供銷重地；竹圍漁港新建的漁產品直銷中心，顯眼奪目的跨海人行拱橋，每逢假日，總吸引大批的遊客前來嘗鮮！
竹圍漁港－魚貨直銷中心
竹圍漁港內設有竹圍漁港魚貨直銷中心，，一樓專賣鮮魚貨論斤拍賣均有，佔地約700坪共有77個攤位販售魚、貝、蝦、藻等水產品及加工醃漬物，可讓遊客滿載而歸。二樓為熟食區共有18個攤位，也可代客烹飪，辦桌叫菜包您滿意；竹圍漁港魚貨直銷中心整年都有漁獲展示及販賣，由於漁獲新鮮，價格合理，每逢假日，魚市場外的馬路人頭鑽動，各種香味四溢的加工漁產品，無不讓人食指大動。</string>
    <string name="flower">flower</string>
    <string name="textview10">佔地2公頃的蓮荷園，建有一座稻草博物館，作為失傳技藝~草編藝術的傳承園區，博物館展示了館主好手藝，無師自通編出的12生肖、18般農具等多項藝品。此外，也列有專區展示外國草編藝品，古早味十足！
農場內另設有五行八卦迷宮,有多種蓮花品種、稀有國寶級植物萍蓬草、三角藺草等水生植物,園區內可提供烤肉、焢土窯及草劍、稻草人、稻草毛筆、草鞋、陶版畫、結草繩、荷葉擂茶、荷葉麻吉、荷葉湯圓等......多項DIY戶外教學活動。
除了大家熟知的蓮花生態之外，也設有豐富的溼地動植物景觀，像是成功復育的台灣萍蓬草、鹼草等植物，都可以在這裡看得到！</string>
    <string name="green">green</string>
    <string name="textview11">位於永安漁港南方約三公里的「新屋綠色走廊」，在市政府用心規劃下，已成為北臺灣最具規模的自行車專用道。車道穿梭於涼爽樹林中，同時旁邊又有濱海道路的海風吹拂，親子同遊、溫情協力，最讓人心曠神怡。
    自行車道入口處有多家單車、協力車出租店，遊客不需自備車輛，就能享受御風而行的快感，與孩子們共同踏出每一步，體會大自然的美景恩典，片刻都是人生最愉悅的時光。
    綠色隧道除了有入口停車場，還有步道系統、木棧平台、眺望休憩涼亭及景觀解說設施等，設備十分完善，走累了，還有造型座椅和貼心的廁所。
    新屋綠色隧道由永安漁港至忘憂門全線均已鋪設柏油路面，地面並有生態動物圖案設計，十分具有海岸自行車道的美學意境。
    車道平緩無坡度，假日綠色隧道內為自行車騎士專用，不必與汽、機車爭道，是全家人一同從事戶外活動的最佳首選。</string>
    <string name="saku">saku</string>
    <string name="textview12">而今味全埔心牧場將不再只是一座牧場，更是北台灣一個休閒渡假的好去處。近年來，更期望以提供休閒、歡樂、學習的牧場之旅滿足每位來到這裡的遊客。
味全埔心牧場園區介紹
休閒徜徉綠意 樂活新體驗
藍天、白雲、草原、牛群，是您一踏入味全埔心牧場即可感受到的自然風光。在綠蔭圍繞的環境下，與家人朋友一同齊力騎著協力車在牧場內隨處逍遙欣賞牧場景色。特別是，味全埔心牧場巧妙融合風格迥異的花園景緻，像是專屬情人世界的情人道、充滿異國風情的日式花園及歐式雕塑花園，在花園裡輕鬆愜意著散步，一同與植物花草大力的呼吸著，放鬆心情，徜徉這片綠意之中吧！

歡樂與感動 為回憶增添繽紛
為了讓您有不同的感受，我們特別準備多項牧野遊樂項目，快拉著您的家人朋友，一同齊力體驗滾草包的樂趣，或是挑戰牧野英豪的套馬競賽，如果玩不過癮，那就體驗當牛仔的樂趣騎著大馬擺個最帥的英姿，或是搭乘馬車環場充當皇家貴族，都是不錯的選擇！</string>
    <string name="wu">wu</string>
    <string name="textview13">
小烏來風景特定區位於桃園市復興區，佔地約195公頃，以小烏來瀑布、風動石、龍鳳瀑布最為聞名，其中小烏來瀑布為匯集眾多瀑布，飛泉自危崖如萬馬奔騰般傾瀉；風動石的奇特異象則遠近馳名，是一處適合輕鬆遊覽的風景區。
位於小烏來風景特定區內的小烏來瀑布屬宇內溪瀑布群之一，激盪的水花動人心弦，以公路旁興建的四層賞瀑台為最佳瞭望點，前行經停車場、瀑布源頭及風動石可抵露營烤肉區(野餐區)及龍鳳瀑布。龍鳳瀑布位於深山幽林之中，需由小烏來瀑布前岔路直行，路程約10分鐘。瀑布分成兩段，似白帛迆邐傾瀉，秀麗綿延，由於未受污染，溪水清澈，繁花綠叢中亦是賞蝶觀鳥的原野。</string>
    <string name="lon">lon</string>
    <string name="art">art</string>
    <string name="textview15">小人國正式誕生於1984年7月7日，當初只為了心中的一個想法，建構出夢想國度！創辦人朱鍾宏董事長在一次國外旅遊看見荷蘭迷你景觀建築時，心裡不禁想著：「如果國內也有這樣的專門模型樂園該有多好？」於是回到國內找了專門製造模型的師傅共襄盛舉，一起編織這個美夢，集世界景觀於一地開創了小人國。

創業是艱辛的歷程，為了打造具有國際觀的休閒遊樂園，團隊們各個絞盡腦汁、為實踐夢想秉持信念，堅持園內所有的迷你建築景觀都要是台灣手工打造。

為了研發不怕風雨的模型，從天天實驗、測試各種顏料、泥土、材質研究到完美無缺才開始建造，不僅如此，許多專家學者紛紛加入建造美夢的團隊，不斷前來園區做研究並且擔任監工的角色就是要呈現最好的東西。
</string>
    <string name="textview16">地址：桃園市桃園區公園路42號   </string>
    <string name="textview17">景點1：虎頭山公園</string>
    <string name="tree">tree</string>
    <string name="button23">附近景點</string>
    <string name="textview24">景點名稱</string>
    <string name="textview25"></string>
    <string name="textview26">電話</string>
    <string name="teztview27">介紹</string>
    <string name="pic">pic</string>
    <string name="textview14">景點2：興仁花園夜市</string>
    <string name="textview18">地址:桃園市八德區長興路46號 </string>
    <string name="button19">附近景點</string>
    <string name="xinzon">xinzon</string>
    <string name="textview20">景點3：龍岡圖書館</string>
    <string name="textview21">地址：桃園市中壢區台貿一街100號 </string>
    <string name="button５">附近景點</string>
    <string name="LLON">LON</string>
    <string name="textview22">景點4：大溪老街</string>
    <string name="textview23">地址：桃園市大溪區和平路、中山路 電話：03-3882201</string>
    <string name="button14">附近景點</string>
    <string name="textview30">景點5：小人國</string>
    <string name="textview31">地址：桃園市龍潭區高原路891號   </string>
    <string name="button20">附近景點</string>
    <string name="xiu">xiu</string>
    <string name="textview32">景點6：流蘇步道</string>
    <string name="textview33">地址：桃園市平鎮區新安里社子支渠流蘇步道  </string>
    <string name="button21">附近景點</string>
    <string name="textview34">景點7：楓樹坑</string>
    <string name="textview35">地址：桃園市龜山區中坑街與風尾街沿線  </string>
    <string name="button22">附近景點</string>
    <string name="textview３６">景點8：長流美術館</string>
    <string name="textview53">電話：03-2124000</string>
    <string name="textview37">地址：桃園市蘆竹區中山路21號 </string>
    <string name="button25">附近景點</string>
    <string name="textview38">景點9：竹圍漁港</string>
    <string name="textview39">地址：桃園市大園區沙崙里1鄰港口7號  </string>
    <string name="button26">附近景點</string>
    <string name="textview40">電話：03-3832308</string>
    <string name="textview36">景點10：蓮荷園休閒農場</string>
    <string name="textview41">地址：桃園市觀音區金華路690號</string>
    <string name="textview42">電話：03-4776972</string>
    <string name="button27">附近景點</string>
    <string name="textview43">景點11：新屋綠色走廊</string>
    <string name="textview44">地址：桃園市新屋區觀海路一段</string>
    <string name="textview45">電話：03-4772111</string>
    <string name="button28">附近景點</string>
    <string name="textview46">景點12：味全埔心牧場</string>
    <string name="textview47">地址：楊梅區幼獅路一段439號</string>
    <string name="textview48">電話：03-4644132</string>
    <string name="button39">附近景點</string>
    <string name="sakura">sakura</string>
    <string name="textview50">景點13：小烏來風景特定區</string>
    <string name="textview51">地址：桃園市復興區義盛里1鄰4-6號</string>
    <string name="textview52">電話：03-3821835</string>
    <string name="button50">Button</string>
    <string name="la">la</string>
    <string name="button51">Button</string>
    <string name="laa">laa</string>
    <string name="button52">附近景點</string>
    <string name="textview58">電話：03-3299792</string>
    <string name="textview55">電話：03-4572105</string>
    <string name="textview56">電話03-4717211</string>
    <string name="textview57">電話：03-3882201</string>
    <string name="textview59">電話：03-2868500</string>
    <string name="textview60">電話:09-77111333</string>
    <string name="textview61">電話:03-3946061</string>
    <string name="textview66">地址</string>
    <string name="title_activity_dayuan2">dayuan2</string>
    <string name="button70">Button</string>
    <string name="cat1">cat1</string>


</resources>
