<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Kunin">

    <TextView
        android:id="@+id/textView32"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/textview36"
        android:textColor="@color/colorAccent"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView33"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/textview41"
        android:textColor="@color/colorAccent" />

    <TextView
        android:id="@+id/textView34"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/textview42"
        android:textColor="@color/colorAccent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button9"
            android:layout_width="283dp"
            android:layout_height="119dp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/cute2"
            android:text="@string/button27"
            android:textColor="@android:color/holo_red_light"
            android:textSize="18sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="wrap_content"
            android:layout_height="137dp"
            android:layout_weight="1"
            android:contentDescription="@string/flower"
            app:srcCompat="@drawable/flower" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView9"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        android:text="@string/textview10" />

</LinearLayout>