<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Younmai">

    <TextView
        android:id="@+id/textView38"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/textview46"
        android:textColor="@color/colorAccent"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView39"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:padding="2dp"
        android:text="@string/textview47"
        android:textColor="@color/colorAccent" />

    <TextView
        android:id="@+id/textView40"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:padding="2dp"
        android:text="@string/textview48"
        android:textColor="@color/colorAccent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="122dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button28"
            android:layout_width="15dp"
            android:layout_height="100dp"
            android:layout_margin="15dp"
            android:layout_weight="1"
            android:background="@drawable/kk"
            android:text="@string/button39"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imageView16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/sakura"
            app:srcCompat="@drawable/sakura" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView11"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="3dp"
        android:text="@string/textview12" />
</LinearLayout>