<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Fuxin">

    <TextView
        android:id="@+id/textView41"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/textview50"
        android:textColor="@color/colorAccent"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView42"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:padding="2dp"
        android:text="@string/textview51"
        android:textColor="@color/colorAccent" />

    <TextView
        android:id="@+id/textView43"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:padding="2dp"
        android:text="@string/textview52"
        android:textColor="@color/colorAccent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="189dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button14"
            android:layout_width="151dp"
            android:layout_height="163dp"
            android:layout_margin="12dp"
            android:layout_weight="1"
            android:background="@drawable/cute2"
            android:text="@string/button52"
            android:textColor="@android:color/holo_red_light"
            android:textSize="18sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imageView12"
            android:layout_width="wrap_content"
            android:layout_height="184dp"
            android:layout_weight="1"
            android:contentDescription="@string/wu"
            app:srcCompat="@drawable/wu" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView12"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="3dp"
        android:text="@string/textview13" />

</LinearLayout>